feat: Add new models for Message and Product Comment
