# backend/models/init-models.js
@@ -11,7 +11,8 @@ import _products from  "./products.js";
 import _upgrade_requests from  "./upgrade_requests.js";
 import _users from  "./users.js";
 import _watchlists from  "./watchlists.js";
-
+import _product_comments from "./product_comments.js";
+import _messages from "./messages.js";
 export default function initModels(sequelize) {
   const auto_bids = _auto_bids.init(sequelize, DataTypes);
   const bids = _bids.init(sequelize, DataTypes);
@@ -24,7 +25,8 @@ export default function initModels(sequelize) {
   const upgrade_requests = _upgrade_requests.init(sequelize, DataTypes);
   const users = _users.init(sequelize, DataTypes);
   const watchlists = _watchlists.init(sequelize, DataTypes);
-
+  const product_comments = _product_comments.init(sequelize, DataTypes);
+  const messages = _messages.init(sequelize, DataTypes);
   products.belongsToMany(users, { as: 'user_id_users', through: blocked_bidders, foreignKey: "product_id", otherKey: "user_id" });
   products.belongsToMany(users, { as: 'user_id_users_watchlists', through: watchlists, foreignKey: "product_id", otherKey: "user_id" });
   users.belongsToMany(products, { as: 'product_id_products', through: blocked_bidders, foreignKey: "user_id", otherKey: "product_id" });
@@ -65,7 +67,16 @@ export default function initModels(sequelize) {
   users.hasMany(upgrade_requests, { as: "upgrade_requests", foreignKey: "user_id"});
   watchlists.belongsTo(users, { as: "user", foreignKey: "user_id"});
   users.hasMany(watchlists, { as: "watchlists", foreignKey: "user_id"});
-
+  product_comments.belongsTo(products, { as: "product", foreignKey: "product_id"});
+  products.hasMany(product_comments, { as: "product_comments", foreignKey: "product_id"});
+  product_comments.belongsTo(users, { as: "user", foreignKey: "user_id"});
+  users.hasMany(product_comments, { as: "product_comments", foreignKey: "user_id"});
+  product_comments.belongsTo(product_comments, { as: "parent", foreignKey: "parent_id"});
+  product_comments.hasMany(product_comments, { as: "replies", foreignKey: "parent_id"});
+  messages.belongsTo(users, { as: "sender", foreignKey: "sender_id"});
+  users.hasMany(messages, { as: "sent_messages", foreignKey: "sender_id"});
+  messages.belongsTo(users, { as: "receiver", foreignKey: "receiver_id"});
+  users.hasMany(messages, { as: "received_messages", foreignKey: "receiver_id"});
   return {
     auto_bids,
     bids,
@@ -78,5 +89,7 @@ export default function initModels(sequelize) {
     upgrade_requests,
     users,
     watchlists,
+    messages,
+    product_comments,
   };
 }
