# backend/routes/bid.route.js
@@ -2,5 +2,5 @@
 import { Router } from "express";
 import bidController from "../controllers/bid.controller.js";
 const bidRouter = Router();
-bidRouter.get('/', bidController.getAllBidsForProduct);
+bidRouter.get('/', bidController.getAll);
 export default bidRouter;
